# Predator-Prey-Archetype-Gridworld-Environment

./: .flake8  .gitignore  .pylintrc  CONTRIBUTING.md  QUICKSTART.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  docs-mkdocs.yml
configs/: actions.yaml  agents.yaml  env.yaml  experiment.yaml  experiment_a2c.yaml  experiment_cql.yaml  experiment_dqn.yaml  experiment_iql.yaml  experiment_mixed.yaml  iql_experiment.yaml  observations.yaml  rewards.yaml
configs/d3qn/: env.yaml  experiment_dqn.yaml  observations.yaml
configs/demo_diagonal/: actions.yaml  env.yaml  experiment_dqn.yaml
configs/demo_plus/: actions.yaml  agents.yaml  experiment_dqn.yaml
configs/demo_speed/: actions.yaml  agents.yaml  env.yaml  experiment_dqn.yaml
configs/dqn_1v1/: actions.yaml  agents.yaml  env.yaml  experiment_dqn.yaml  observations.yaml
configs/dqn_speed1/: agents.yaml  experiment_dqn.yaml
configs/dqn_speed2/: agents.yaml  experiment_dqn.yaml
configs/dqn_speed3/: agents.yaml  experiment_dqn.yaml  rewards.yaml
docs/: contributing.md  dqn-integration-notes.md  git-workflow.md  index.md  mission.md  observations.md  pr-comparison-22-23-24.md  student-guide.md  usage.md
docs/algorithms/: cql-mixed.md  dqn.md  index.md  iql.md
docs/api/: agents.md  baselines.md  gridworld.md
docs/concepts/: actions.md  agents.md  dqn-variants.md  gridworld.md  marl.md  observations.md  rewards.md  rl-foundations.md  wrappers.md
docs/flows/: init-flow.md  step-flow.md  training-loop.md
docs/guides/: config-recipes.md  custom-action.md  quickstart.md  (+1 more)
miscellenous/: generate_pdf_slides.py  generate_presentation.py  md_to_pdf.py
notebooks/: 01_iql_demo.ipynb  02_cql_demo.ipynb
scripts/: make_docs_media.py
slides/: dqn_gen.py  presentation.pptx
tests/: conftest.py  test_actions.py  test_architecture_contract.py  test_baselines_a2c.py  test_baselines_cql.py  test_baselines_dqn.py  test_baselines_iql.py  test_baselines_mixed.py  test_core_agent.py  test_core_gridworld.py  test_integration.py  test_observations.py  test_registry.py  test_rewards.py
(+78 files in other folders)
